# pokemon-dataset-for-strategy

./: Cargo.toml  README.md
src/: api_request.rs  io_streams.rs  main.rs  pokemon.rs  request_pokemon.rs
