[package]
name = "pokemon-dataset-for-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
async-std = {version = "1.9.0", features = ["attributes", "tokio1"]}
json = "0.12.4"